// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render as a button 1`] = `
<div>
  <a
    class="css-wnzrvu"
    href="#"
  >
    example
  </a>
</div>
`;

exports[`Link should render as default 1`] = `
<div>
  <a
    class="css-1ybzjnu"
    href="#"
  >
    example
  </a>
</div>
`;
